// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`bust cli complains about missing command 1`] = `
"Not enough non-option arguments: got 0, need at least 1

whoops, something went wrong! run with --help
"
`;

exports[`bust cli complains about unrecognized command 1`] = `
"Unknown argument: wat-nope-nah

whoops, something went wrong! run with --help
"
`;

exports[`bust cli prints help 1`] = `
"                                          __                       __
                                         /\\\\ \\\\                     /\\\\ \\\\__
    __   __   __   __   __   __   __   __\\\\ \\\\ \\\\____  __  __    ____\\\\ \\\\ ,_\\\\
   /\\\\_\\\\ /\\\\_\\\\ /\\\\_\\\\ /\\\\_\\\\ /\\\\_\\\\ /\\\\_\\\\ /\\\\_\\\\ /\\\\_\\\\\\\\ \\\\ '__\`\\\\/\\\\ \\\\/\\\\ \\\\  /',__\\\\\\\\ \\\\ \\\\/
 __\\\\/_/_\\\\/_/_\\\\/_/_\\\\/_/_\\\\/_/_\\\\/_/_\\\\/_/_\\\\/_/_\\\\ \\\\ \\\\L\\\\ \\\\ \\\\ \\\\_\\\\ \\\\/\\\\__, \`\\\\\\\\ \\\\ \\\\_  __
/\\\\_\\\\ /\\\\_\\\\ /\\\\_\\\\ /\\\\_\\\\ /\\\\_\\\\ /\\\\_\\\\ /\\\\_\\\\ /\\\\_\\\\ /\\\\_\\\\\\\\ \\\\_,__/\\\\ \\\\____/\\\\/\\\\____/ \\\\ \\\\__\\\\/\\\\_\\\\
\\\\/_/ \\\\/_/ \\\\/_/ \\\\/_/ \\\\/_/ \\\\/_/ \\\\/_/ \\\\/_/ \\\\/_/ \\\\/___/  \\\\/___/  \\\\/___/   \\\\/__/\\\\/_/


Usage: bust <command> [options]

Commands:
  gitignore  create .gitignore file                                [aliases: gi]

Options:
  --version, -v  display version information                           [boolean]
  --help, -h     display help message                                  [boolean]

"
`;
